# sysprog-sandbox

./: .gitignore  CMakeLists.txt  README.md  text.txt
child_src/: CmakeLists.txt
child_src/include/: IPlugin.hpp
child_src/src/: PluginWrapper.cpp  PluginWrapper.hpp  main.cpp
main_src/: CmakeLists.txt
main_src/src/: main.cpp
other_src/: CmakeLists.txt
other_src/src/: main.cpp
plugin1/: CmakeLists.txt
plugin1/src/: MyPlugin.cpp
plugin2/: CmakeLists.txt
plugin2/src/: MyPlugin.cpp
plugin3/: CmakeLists.txt
plugin3/src/: MyPlugin.cpp
plugin4/: CmakeLists.txt
plugin4/src/: MyPlugin.cpp  MyPlugin.hpp
